2차 수
